rudy-db/tests/snapshots/resolve_function@x86_64-unknown-linux-gnu.snap
---
source: rudy-db/tests/static_tests.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "simple_test::main",
        address: "0x7b70",
        size: "0xad",
        params: [],
    },
)
