rudy-db/tests/snapshots/resolve_position@aarch64-apple-darwin.snap
---
source: rudy-db/tests/static_tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x1000009b8",
}
