rudy-db/tests/snapshots/resolve_position@aarch64-unknown-linux-gnu-2.snap
---
source: rudy-db/tests/static_tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x651c",
}
