rudy-db/tests/snapshots/resolve_position@x86_64-apple-darwin-2.snap
---
source: rudy-db/tests/static_tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x100000965",
}
