rudy-db/tests/snapshots/resolve_position@x86_64-unknown-linux-gnu-2.snap
---
source: tests/mod.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x7d18",
}
